2022-09-08

  * Fix potential resource trickle OOS (thanks to Livv)
  * make town and city phase upgrades fast and free
  * release v0.26.3

2022-09-07

  * fix starting unit counts
  * release v0.26.2
  * increase vision range of females (inherit)

2022-09-06

  * first release
  * disable storehouse, farmstead, corral, field
  * increase female attack
  * release v0.26.1
