@@ -26,7 +26,11 @@
 	"tooltip": "Advance to City Phase, which unlocks more entities and technologies. Civic Centers +50% territory influence radius. Structures +9 capture points regeneration rate per garrisoned unit.",
 	"modifications": [
 		{ "value": "Capturable/GarrisonRegenRate", "add": 9, "affects": "Structure" },
-		{ "value": "TerritoryInfluence/Radius", "multiply": 1.5, "affects": "CivCentre" }
+		{ "value": "TerritoryInfluence/Radius", "multiply": 1.5, "affects": "CivCentre" },
+		{ "value": "ResourceTrickle/Rates/food", "multiply": 1.5 },
+		{ "value": "ResourceTrickle/Rates/wood", "multiply": 1.5 },
+		{ "value": "ResourceTrickle/Rates/stone", "multiply": 1.5 },
+		{ "value": "ResourceTrickle/Rates/metal", "multiply": 1.5 }
 	],
 	"soundComplete": "interface/alarm/alarm_phase.xml"
 }
