@@ -26,7 +26,11 @@
 	"tooltip": "Advance to Town Phase, which unlocks more entities and technologies. Civic Centers +30% territory influence radius. Structures +7 capture points regeneration rate per garrisoned unit.",
 	"modifications": [
 		{ "value": "Capturable/GarrisonRegenRate", "add": 7, "affects": "Structure" },
-		{ "value": "TerritoryInfluence/Radius", "multiply": 1.3, "affects": "CivCentre" }
+		{ "value": "TerritoryInfluence/Radius", "multiply": 1.3, "affects": "CivCentre" },
+		{ "value": "ResourceTrickle/Rates/food", "multiply": 1.3 },
+		{ "value": "ResourceTrickle/Rates/wood", "multiply": 1.3 },
+		{ "value": "ResourceTrickle/Rates/stone", "multiply": 1.3 },
+		{ "value": "ResourceTrickle/Rates/metal", "multiply": 1.3 }
 	],
 	"soundComplete": "interface/alarm/alarm_phase.xml"
 }
